k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summersafe-service
spec:
  selector:
    app: summersafe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
