k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summersafe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  tls:
    - hosts:
        - summersafe.tech
      secretName: summersafe-tls
  rules:
    - host: summersafe.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: summersafe-service
                port:
                  number: 80
